--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="canonical" href="https://start-polymer3.firebaseapp.com/" />
   <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js" async></script>
   <script src="./src/start-polymer3.js" type="module" async></script>
-  <title>Start Polymer 3.0</title>
+  <title>Agility Hacker Test</title>
 </head>
 <body>
   <start-polymer3>
@@ -31,7 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       users with JavaScript disabled will see something helpful.
     -->
 
-    <h1>Start Polymer 3.0</h1>
+    <h1>Agility Hacker Test</h1>
     <p>Could not render the custom element. Check that JavaScript is enabled.</p>
   </start-polymer3>
 </body>
